# k

./: .gitignore  start_website.sh  vercel.json
issues/core-agent-runtime/: issue.md
learn/: README.md  agents.md  index.md  package-lock.json  package.json  start.sh
learn/.vitepress/: config.ts
learn/.vitepress/theme/: index.ts  style.css
learn/code/ch01/: Cargo.toml
learn/code/ch02/: Cargo.toml
learn/code/ch02/src/: main.rs
learn/code/ch03/: Cargo.toml
learn/code/ch04/: Cargo.toml
learn/code/ch05/: Cargo.toml
learn/code/ch06/: Cargo.toml
learn/code/ch07/: Cargo.toml
learn/code/ch08/: Cargo.toml
learn/code/ch09/: Cargo.toml
learn/code/ch10/: Cargo.toml
learn/code/ch11/: Cargo.toml
learn/code/ch12/: Cargo.toml
learn/code/ch13/: Cargo.toml
learn/code/ch14/: Cargo.toml
learn/code/ch15/: Cargo.toml
learn/code/ch15/src/: main.rs
learn/linear/: index.md
learn/linear/01-what-is-a-coding-agent/: 01-the-ai-coding-revolution.md  02-defining-coding-agents.md  03-history-and-evolution.md  04-the-landscape-today.md  05-claude-code-analysis.md  06-opencode-analysis.md  07-pi-agent-analysis.md  08-codex-analysis.md  09-common-architecture-patterns.md  10-agentic-vs-chatbot.md  (+5 more)
learn/project/: index.md
learn/scripts/: validate-content.sh
research/: README.md  index.md
research/agents/: claude-code.md  codex.md  opencode.md  pi-coding-agent.md
research/concepts/: agentic-loop.md  context-management.md  streaming.md  tool-systems.md
webapp/: index.md  package-lock.json  package.json  vercel.json
webapp/.vitepress/: config.ts
(+769 files in other folders)
