[package]
name = "cli-agent-ch15"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
